about section mobile fix

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -112,6 +112,7 @@
     .about {
 
         background-position-x: -25rem;
+        background-position-y: -40rem;
         &--card {
             // grid-template-rows: 20rem 2fr;
             // grid-template-columns: auto;
@@ -160,12 +161,15 @@
 @media screen and (max-width: 500px) {
     .about {
 
+        &--title {
+            margin-top: 4rem;
+        }
+
         background: none;
         &--mobile-background {
             background: url(../../images/ConstructionImage.JPG);
             background-size: contain;
-            height: 100%;
-            width: 100%;
+            height: 29rem;
         }
 
         padding: 0 2rem 0rem;
@@ -182,6 +186,7 @@
 
 @media screen and (max-width: 428px) {
     .about {
+
 
         &--mobile-background {
             height: 29rem;
